# cli-plugin-webui

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  Dockerfile  LICENSE  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker.yml  frontend-build.yml  lint.yml  release.yml
docker/: Dockerfile.dev  Dockerfile.prod
frontend/: .editorconfig  .eslintrc.js  .prettierrc.json  README.md  index.html  openapi-ts.config.ts  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css  types.ts  vite-env.d.ts
frontend/src/api/: authenticationInterceptor.ts  index.ts  models.ts  schemas.ts
frontend/src/assets/: main.css
frontend/src/client/: init.ts  useMonacoWorker.ts  utils.ts
frontend/src/components/: Chart.vue  ChartItem.vue  Drawer.vue  DrawerItem.vue  EditorItem.vue  FileExplorer.vue  FooterItem.vue  HomePage.vue  IndexPage.vue  IndexView.vue  LoginPage.vue  NonebotStore.vue  PluginManage.vue  SettingPage.vue  Toast.vue  ToastItem.vue
frontend/src/config/: index.ts
frontend/src/core/: notification.ts  ws.ts
frontend/src/layouts/: AppSideNav.vue  AppStatusBar.vue  AppTopBar.vue
frontend/src/plugins/: index.ts
frontend/src/router/: client.ts  index.ts
frontend/src/store/: app.ts  extensionStore.ts  global.ts  setting.ts  status.ts
frontend/src/stores/: ChartStorage.ts  ChartStore.ts  CustomStorage.ts  CustomStore.ts  NavStorage.ts  NavStore.ts  NoneBotStorage.ts  NoneBotStore.ts  StatusStore.ts  ToastStorage.ts  ToastStore.ts  index.ts  nonebotStorage.ts  viewHistoryRecorder.ts
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  index.ts  notification.ts  scrollbar.ts  ws.ts
frontend/src/views/: NotFound.vue  ViewIndex.vue  Welcome.vue  WelcomeItem.vue
nb_cli_plugin_webui/: __init__.py  cli.py  config.py  exceptions.py  i18n.py  log.py  patch.py  plugin.py  scripts.py  server.py
nb_cli_plugin_webui/api/: __init__.py  error.py  event.py
nb_cli_plugin_webui/api/dependencies/: __init__.py  authentication.py  files.py  nonebot.py  performance.py  pip.py  plugin.py  project.py
nb_cli_plugin_webui/api/routes/: adapter.py  api.py  authentication.py  check.py  driver.py  files.py  log.py  performance.py  project.py  store.py
nb_cli_plugin_webui/app/: __init__.py  application.py  config.py  constants.py  exceptions.py  logging.py  middlewares.py  router.py  schemas.py
nb_cli_plugin_webui/app/auth/: constants.py  exceptions.py  router.py  schemas.py  utils.py
nb_cli_plugin_webui/app/file/: constants.py  exceptions.py  router.py  schemas.py  utils.py
nb_cli_plugin_webui/app/handlers/: __init__.py  nonebot.py  pip.py  pkg.py  (+3 more)
nb_cli_plugin_webui/cli/: __init__.py  config.py  docker.py  token.py
nb_cli_plugin_webui/core/: log.py  server.py
nb_cli_plugin_webui/utils/: __init__.py  apscheduler.py  machine.py  models.py  performance.py  store.py
script/: README.md  generate_pot.sh
(+299 files in other folders)
